--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Register for Full Stack Conf</title>
-	<link rel="stylesheet" href="css/style.css">
+  <title>Register for Full Stack Conf</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	<div class="container">
+  <div class="container">
 
     <header>
       <span>Register for</span>
@@ -77,33 +79,33 @@
 
       <fieldset class="activities">
         <legend>Register for Activities</legend>
-          <label>
-            <input type="checkbox" name="all" data-cost="200"> Main Conference — $200
-          </label>
-          <label>
-            <input type="checkbox" name="js-frameworks" data-day-and-time="Tuesday 9am-12pm" data-cost="100">
-            JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100
-          </label>
-          <label>
-            <input type="checkbox" name="js-libs" data-day-and-time="Tuesday 1pm-4pm" data-cost="100">
-            JavaScript Libraries Workshop — Tuesday 1pm-4pm, $100
-          </label>
-          <label>
-            <input type="checkbox" name="express" data-day-and-time="Tuesday 9am-12pm" data-cost="100">
-            Express Workshop — Tuesday 9am-12pm, $100
-          </label>
-          <label>
-            <input type="checkbox" name="node" data-day-and-time="Tuesday 1pm-4pm" data-cost="100">
-            Node.js Workshop — Tuesday 1pm-4pm, $100
-          </label>
-          <label>
-            <input type="checkbox" name="build-tools" data-day-and-time="Wednesday 9am-12pm" data-cost="100">
-            Build tools Workshop — Wednesday 9am-12pm, $100
-          </label>
-          <label>
-            <input type="checkbox" name="npm" data-day-and-time="Wednesday 1pm-4pm" data-cost="100">
-            npm Workshop — Wednesday 1pm-4pm, $100
-          </label>
+        <label>
+          <input type="checkbox" name="all" data-cost="200"> Main Conference — $200
+        </label>
+        <label>
+          <input type="checkbox" name="js-frameworks" data-day-and-time="Tuesday 9am-12pm" data-cost="100">
+          JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100
+        </label>
+        <label>
+          <input type="checkbox" name="js-libs" data-day-and-time="Tuesday 1pm-4pm" data-cost="100">
+          JavaScript Libraries Workshop — Tuesday 1pm-4pm, $100
+        </label>
+        <label>
+          <input type="checkbox" name="express" data-day-and-time="Tuesday 9am-12pm" data-cost="100">
+          Express Workshop — Tuesday 9am-12pm, $100
+        </label>
+        <label>
+          <input type="checkbox" name="node" data-day-and-time="Tuesday 1pm-4pm" data-cost="100">
+          Node.js Workshop — Tuesday 1pm-4pm, $100
+        </label>
+        <label>
+          <input type="checkbox" name="build-tools" data-day-and-time="Wednesday 9am-12pm" data-cost="100">
+          Build tools Workshop — Wednesday 9am-12pm, $100
+        </label>
+        <label>
+          <input type="checkbox" name="npm" data-day-and-time="Wednesday 1pm-4pm" data-cost="100">
+          npm Workshop — Wednesday 1pm-4pm, $100
+        </label>
 
       </fieldset>
       <fieldset>
@@ -121,7 +123,7 @@
 
           <div class="col-6 col">
             <label for="cc-num">Card Number:</label>
-        	  <input id="cc-num" name="user-cc-num" type="text">
+            <input id="cc-num" name="user-cc-num" type="text">
           </div>
 
           <div class="col-3 col">
@@ -160,11 +162,13 @@
         </div>
 
         <div id="paypal" class="paypal">
-        	<p>If you selected the PayPal option we'll take you to Paypal's site to set up your billing information, when you click “Register” below.</p>
+          <p>If you selected the PayPal option we'll take you to Paypal's site to set up your billing information, when
+            you click “Register” below.</p>
         </div>
 
         <div id="bitcoin" class="bitcoin">
-        	<p>If you selected the Bitcoin option we'll take you to the Coinbase site to set up your billing information. Due to the nature of exchanging Bitcoin, all Bitcoin transactions will be final.</p>
+          <p>If you selected the Bitcoin option we'll take you to the Coinbase site to set up your billing information.
+            Due to the nature of exchanging Bitcoin, all Bitcoin transactions will be final.</p>
         </div>
 
       </fieldset>
@@ -176,4 +180,5 @@
   </div>
   <script src="js/script.js"></script>
 </body>
+
 </html>
